# simple-ray-tracer

./: CMakeLists.txt  README.md  render.ppm
src/: geometry.hpp  light.hpp  main.cpp  material.hpp  render.cpp  render.hpp  sphere.cpp  sphere.hpp
